fix alignment on sku (pdp)

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -69,7 +69,6 @@ input.button.button--primary.button-bundle.style- {
 }
 
 .productView-info-name {
-  width: 36% !important;
   font-weight: bold !important;
 }
 
